# termi

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
TermiCoreBase/: CMakeLists.txt
TermiCoreBase/include/: TerminalGuard.h  TerminalTopology.h  cg_gfx.h  ray_console.h
TermiCoreBase/src/: ConsoleRenderer.h  TerminalGuard.h  TerminalTopology.h  cg_gfx.cpp  ray_console.cpp
TermiCoreBase/tests/: main.cpp
console/: CMakeLists.txt  main.cpp
doc/: README.md
games/: CMakeLists.txt
games/snake/: CMakeLists.txt
games/snake/src/: GameManager.h  GameUI.cpp  GameUI.h  ParticleSystem.hpp  SnakeAI.cpp  SnakeAI.h  SnakeGame.cpp  SnakeGame.h  main.cpp
games/snake/tests/: test_ai.h  test_h.h  test_main.cpp
games/tetris/: CMakeLists.txt
games/tetris/src/: AIController.cpp  AIController.h  AudioManager.h  GameContext.h  GameEngine.cpp  GameEngine.h  GameLogic.cpp  GameLogic.h  GameView.cpp  GameView.h  InputHandler.h  LogSystem.cpp  LogSystem.h  TimeTicker.h  key.h  main.cpp  shp.h
games/tetris/tests/: test_main.cpp  tested.h  testing.h
